# markovian

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml  thirdparty.md
.devcontainer/: Dockerfile  base.Dockerfile  devcontainer.json
.github/workflows/: build_release.yml  rust.yml
_githooks/: README.md  pre-commit  pre-push
markovian-cli/: Cargo.toml
markovian-cli/src/: main.rs
markovian-core/: Cargo.toml
markovian-core/benches/: my_benchmark.rs
markovian-core/fuzz/: Cargo.toml
markovian-core/fuzz/fuzz_targets/: symboltable_fuzz.rs
markovian-core/src/: analyser.rs  generator.rs  generator_wrapper.rs  lib.rs  markov_model.rs  ngram.rs  num_basic.rs  pattern.rs  pattern_verbose.rs  renderer.rs  sequence_map.rs  substrings.rs  symbol.rs  symbolize_new.rs  symboltable_wrapper.rs  syncedheap.rs  tombstone.rs  tombstone_map.rs  vecutils.rs  weighted_sampler.rs
markovian-core/src/language/: compiled.rs  context.rs  mod.rs  parse.rs  pattern_verbose.rs  raw.rs
markovian-core/src/utils/: mod.rs  nf32.rs
markovian-core/test_resources/: town_01.lang
markovian-core/test_resources/language/invalid_other_recursive/: child.lang  main.lang
markovian-core/test_resources/language/invalid_self_recursive/: main.lang
markovian-core/test_resources/language/sub_language_01/: child.lang  main.lang
markovian-py/: Cargo.toml
resources/: Moby_Names_M_lc.txt  README.md
resources/rules/: FantasyNovel.rul  mock_elivish.rul
resources/rules/fantasy_character/: main.rul  prefix_adj.txt  suffix_noun.txt  type.txt
src/: main.rs
