[package]
name = "markovian"
version = "0.1.0"
authors = ["Michael Anderson <drmikeando@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
structopt = "0.3"
fern = {version="0.6", features=["colored"]}
log = "0.4"
markovian_core = { path = "../markovian-core" }
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
